<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">ac</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtract">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="addition">+</string>
    <string name="plus_minus">+/-</string>
    <string name="backspace">⌫</string>
    <string name="plus_zero">0</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="everlasting_sky">Everlasting Sky</string>
    <string name="cloudy_apple">Cloudy apple</string>
    <string name="new_york">New York</string>
    <string name="blessing">Blessing</string>
    <string name="white">White</string>
    <string name="choose_a_theme">Choose a theme:</string>
</resources>