<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/grid_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/process_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="end"
            android:textColor="@color/gray"
            android:textSize="@dimen/default_text_size"
            tools:text="5+10" />

        <TextView
            android:id="@+id/result_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="@dimen/result_text_size"
            tools:text="15" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        app:layout_constraintVertical_weight="2">

        <Button
            android:id="@+id/btn_ac"
            style="@style/ActionButton"
            android:text="@string/clear" />

        <Button
            android:id="@+id/btn_backspace"
            style="@style/ActionButton"
            android:text="@string/backspace" />

        <Button
            android:id="@+id/btn_plus_minus"
            style="@style/ActionButton"
            android:text="@string/plus_minus" />

        <Button
            android:id="@+id/btn_division"
            style="@style/ActionButton"
            android:text="@string/division" />

        <Button
            android:id="@+id/btn_seven"
            style="@style/CalcButton"
            android:text="@string/seven" />

        <Button
            android:id="@+id/btn_eight"
            style="@style/CalcButton"
            android:text="@string/eight" />

        <Button
            android:id="@+id/btn_nine"
            style="@style/CalcButton"
            android:text="@string/nine" />

        <Button
            android:id="@+id/btn_multiply"
            style="@style/ActionButton"
            android:text="@string/multiply" />

        <Button
            android:id="@+id/btn_four"
            style="@style/CalcButton"
            android:text="@string/four" />

        <Button
            android:id="@+id/btn_five"
            style="@style/CalcButton"
            android:text="@string/five" />

        <Button
            android:id="@+id/btn_six"
            style="@style/CalcButton"
            android:text="@string/six" />

        <Button
            android:id="@+id/btn_subtract"
            style="@style/ActionButton"
            android:text="@string/subtract" />

        <Button
            android:id="@+id/btn_one"
            style="@style/CalcButton"
            android:text="@string/one" />

        <Button
            android:id="@+id/btn_two"
            style="@style/CalcButton"
            android:text="@string/two" />

        <Button
            android:id="@+id/btn_three"
            style="@style/CalcButton"
            android:text="@string/three" />

        <Button
            android:id="@+id/btn_addition"
            style="@style/ActionButton"
            android:text="@string/addition" />

        <Space style="@style/CalcButton" />

        <Button
            android:id="@+id/btn_zero"
            style="@style/CalcButton"
            android:text="@string/plus_zero" />

        <Button
            android:id="@+id/btn_point"
            style="@style/CalcButton"
            android:text="@string/point" />

        <Button
            android:id="@+id/btn_equals"
            style="@style/SuperActionButton"
            android:text="@string/equals" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>